--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.27)
 project(others)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,cppcoreguidelines-*)
 
 link_directories(/opt/homebrew/lib)
 include_directories(/opt/homebrew/include)
