--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(others)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,cppcoreguidelines-*)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 
 link_directories(/opt/homebrew/lib)
 include_directories(/opt/homebrew/include)
