--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ set(CMAKE_BUILD_TYPE DEBUG)
 link_directories(/opt/homebrew/lib)
 include_directories(/opt/homebrew/include)
 
-add_executable(others src/list2_8.cpp)
+add_executable(others print_between_thread.cpp)
 
 target_link_libraries(others PRIVATE fmt)
