--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
 set(CMAKE_BUILD_TYPE DEBUG)
 
-link_directories(/opt/homebrew/lib)
-include_directories(/opt/homebrew/include)
+link_directories(/opt/homebrew/lib /opt/homebrew/Cellar/libomp/18.1.1/lib)
+include_directories(/opt/homebrew/include ./include /opt/homebrew/Cellar/libomp/18.1.1/include)
 
-add_executable(others print_between_thread.cpp)
+add_executable(others cuda_doc/omp_sinsum.cpp)
 
-target_link_libraries(others PRIVATE fmt)
+target_link_libraries(others PRIVATE fmt /opt/homebrew/Cellar/libomp/18.1.1/lib/libomp.a)
